--- a/style/style.css
+++ b/style/style.css
@@ -62,12 +62,21 @@ button {
     display: flex;
 }
 
+.header__lin {
+    font-size: 20px;
+    color: var(--link);
+    padding: 15px 15px;
+    transition: .6s;
+    display: block;
+    width: max-content;
+    margin-left: 50px;
+}
 .header__link {
     font-size: 20px;
     color: var(--link);
     padding: 15px 15px;
-    margin: 0 10px;
     transition: .6s;
+    margin:0 4px;
     display: block;
     width: max-content;
 }
@@ -183,7 +192,7 @@ button {
 }
 
 .header__content-image {
-    width:100%;
+    width:100%; 
 }
 
 .header__content_link:hover {
@@ -195,6 +204,7 @@ button {
 
 .header__content-image img {
     width: 100%;
+    height: 400px;
 }
 
 .header__content-image-bottom {
@@ -958,11 +968,10 @@ button {
 
 
 
-@media(max-width: 991.8px) {
+@media(min-width: 991.8px) {
     .header__nav-tel {
         display: none;
     }
-
     .header__list {
         display: block;
         position: fixed;
@@ -995,7 +1004,8 @@ button {
     }
 
     .header__link {
-        margin-bottom: 24px;
+        margin-bottom: 4px;
+        margin-left: 50px;
     }
 
     .close {
