--- a/style/style.css
+++ b/style/style.css
@@ -468,6 +468,7 @@ button {
     width: 100%;
     height: 500px;
     opacity: .5;
+    border-radius: 100px;
 }
 .mySlides {
     position: relative;
@@ -475,8 +476,10 @@ button {
 }
 .myTxt1{
     position: absolute;
-    top: 0;
-    left: 0;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%);
+    font-size: 40px;
 }
 
 
