--- a/style/style.css
+++ b/style/style.css
@@ -874,10 +874,27 @@ button {
 }
 
 /*=================================carsouel=====================================================*/
+.carousel_logos{
+    position: absolute;
+    top: -10px;
+    left: 0;
+    width: 123px !important;
+    height: 111px !important;
+    overflow: hidden !important;
+    opacity: .6;
+}
+.swiper_it{
+    position: relative;
+}
+.carousel_logos:nth-child(2){
+    position: absolute;
+width: 244px !important;
+height: 218px !important;
+left: 500px !important;
+top: 150px !important;
 
+}
 .carousel {
-
-   
     width: 100%;
     height: 338px;
     border-radius: 100px;
