--- a/style/style.css
+++ b/style/style.css
@@ -467,8 +467,9 @@ button {
 .mySlides img{
     width: 100%;
     height: 500px;
-    opacity: .5;
     border-radius: 100px;
+    align-items: center;
+    display: flex;
 }
 .mySlides {
     position: relative;
@@ -477,10 +478,30 @@ button {
 
 .myTxt1{
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%);
+    top: 0%;
+    left: 0%;
     font-size: 40px;
+    background: rgba(0, 0, 0, 0.45);
+    color: white;
+    width: 100%;
+    height:100%;
+    border-radius: 100px;
+}
+.myTxt1 h3{
+    position: absolute;
+    top: 20px;
+    left: 70px;
+    
+}
+.myTxt1 p{
+    position: absolute;
+    top: 70px;
+    left: 70px;
+}
+.myTxt1 p:nth-child(2){
+    position: absolute;
+    top: 390px;
+    left: 70px;
 }
 
 
@@ -569,8 +590,18 @@ button {
 .certificate_content_card {
     border-radius: 100px;
     height: 224px;
+    position: relative;
 }
+.certificate_content_cardit{
+    position: absolute;
+    width: 244px !important;
+    height: 218px !important;
+    opacity: .6;
+    right: -44px;
+    bottom: -127px;
+transform: rotate(15deg);
 
+}
 .certificate_content_card img {
     max-width: 478px;
     width: 100%;
@@ -1216,11 +1247,22 @@ button {
 
     }
 
+    
     .certificate_content_card img {
         width: 100%;
         height: 201px;
     }
-
+    .certificate_content_card_foto{
+        position: relative;
+    }
+    .certificate_content_cardit{
+        display: none;
+    }
+    .certificate_content_card_logo{
+        position: absolute;
+        top: 0;
+    }
+    
     .certificate_content_title {
         align-items: center;
         justify-content: center;
@@ -1342,6 +1384,17 @@ margin-bottom: 25px;
 .certificate h4{
     font-size: 40px !important;
     line-height: 40px !important;
+
+}
+.certificate_content_title h3{
+    font-size: 24px;
+    line-height: 29px;
+
+}
+.certificate_content_title p,a{
+    font-size: 17px;
+    line-height: 23px;
+    padding: 14px 32px; 
 
 }
 
